feat: Initial service commit
